# unions-shear-ustc-cea

./: LICENCE.txt  README.md  requirements.txt  setup.cfg  setup.py
agn_ggl/data/: SDSS_SMBH_202206.txt
agn_ggl/notebooks/: GGL_AGN_UNIONS.ipynb  SMBH cataogue basics.ipynb  config_convert.py
auto_correlation/: Makefile  Readme.txt  cross_tpcf.f90  crossdr72  crossdr72.f  external.f  external90.f90  int2str.f  rand_sky.f  recipes.f
docs/source/: conf.py  contributing.rst  installation.rst  quickstart.rst  toc.rst
notebooks/: example_notebook.ipynb
notebooks/agn_ggl/: GGL_AGN_UNIONS.ipynb  SMBH cataogue basics.ipynb
scripts/: compute_ng_binned_samples.py  example_script.py  split_sample.py  z_to_dndz.py
unions_wl/: __init__.py  catalogue.py  sample.py  theory.py
unions_wl/example/: classes.py  hello.py  math.py
unions_wl/tests/: test_example.py
